--- a/style.css
+++ b/style.css
@@ -1,63 +1,18 @@
-body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #f0f0f0;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+.fa-facebook-t{
+  background: blue;
+  color: red
+  }
+  
+.fa-instagram{
+  color: deeppink
 }
-
-.container {
-    background: #fff;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    max-width: 600px;
-    width: 100%;
-    text-align: center;
+.fa-tiktok{
+  box-shadow: 5px 3px 4px 5px solid red;
 }
-
-h1 {
-    margin: 0 0 20px;
-    color: #333;
+.list-inline-item{
+  background: linear-gradient(white, lightgray);
+  border-radius: 5px
 }
-
-textarea {
-    width: calc(100% - 20px);
-    height: 150px;
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    font-size: 16px;
-    resize: none;
-    margin-bottom: 20px;
-}
-
-button {
-    padding: 10px 20px;
-    font-size: 16px;
-    color: #fff;
-    background-color: #007bff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-button:hover {
-    background-color: #0056b3;
-}
-
-#result {
-    margin-top: 20px;
-    text-align: left;
-    white-space: pre-wrap; /* Preserve whitespace and line breaks */
-    font-size: 14px;
-    color: #555;
-    border: 1px solid #ddd;
-    padding: 10px;
-    border-radius: 4px;
-    background-color: #fafafa;
+.list-inline-item:active{
+  background: none;
 }
